@@ -15,6 +15,8 @@ update-manager (1:0.125.2) UNRELEASEDkarmic; urgency=low
   * UpdateManager/UpdateManager.py:
     - ensure that the changelog always matches the currently selected
       pkg by fixing race during download (LP: #424918) 
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - do not hang when cancel is clicked (LP: #426718)
 
   [ Brian Murray ]
   * typo fixes (thanks to Brian Murray, LP: #423409)
